tentativa de corrigir bug de overflow 5

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-size: cover;
     background-color: #e3e5eb;
     overflow-x: hidden;
-    position: fixed;
+    overflow-y: visible;
 }
 
 * {
@@ -90,14 +90,12 @@ a:hover{
         color: #A61103;
         margin-top: 10vh;
         font-weight: bold;
-        border: 1px solid black;
     }
 
     #biography img{
         display: flex;
         align-items:center;
         justify-content: space-around;
-        width: 100%;
         height: 50vh;
     }
 
